--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -59,7 +59,7 @@
     <li>Depuis la page d'accueil, utilise les onglets <strong>Sites</strong> et <strong>Talents</strong> pour naviguer facilement.</li>
     <li>Mets Réunion Wiki en favori pour accéder rapidement aux services essentiels.</li>
     <li>Installe l'application PWA (icône loupe → « Ajouter à l'écran d'accueil » sur mobile).</li>
-    <li>Suis <a href="https://www.instagram.com/reunionwiki" target="_blank" rel="noopener">@reunionwiki</a> pour les nouveautés.</li>
+    <li>Suis <a href="https://www.instagram.com/kery.rdd" target="_blank" rel="noopener">@reunionwiki</a> pour les nouveautés.</li>
   </ul>
 </section>
 {% endblock %}
