Ajout dashboard admin

--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -14,6 +14,12 @@
       <a class="btn btn-primary" href="{{ url_for('admin_create_site') }}">
         + Ajouter un site
       </a>
+      <a class="btn btn-secondary" href="{{ url_for('admin_sites') }}">
+        Tous les sites
+      </a>
+      <a class="btn btn-secondary" href="{{ url_for('admin_categories') }}">
+        Catégories
+      </a>
       <a class="btn btn-secondary" href="{{ url_for('admin_logout') }}">
         Déconnexion
       </a>
